crates/runtime/tests/search/snapshots/integration_models__search__arrow-s3_vectors-dataset-basic_megascience_vector_search_sql_random_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT subject FROM vector_search(qs, 'second', answer) order by score desc LIMIT 4"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                      |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs, Utf8("second"), answer).subject                                                                             |
|               |   Sort: vector_search(qs, Utf8("second"), answer).score DESC NULLS FIRST, fetch=4                                                         |
|               |     Projection: vector_search(qs, Utf8("second"), answer).subject, vector_search(qs, Utf8("second"), answer).score                        |
|               |       TableScan: vector_search(qs, Utf8("second"), answer) projection=[score, subject]                                                    |
| physical_plan | ProjectionExec: expr=[subject@1 as subject]                                                                                               |
|               |   SortExec: TopK(fetch=4), expr=[score@0 DESC], preserve_partitioning=[false]                                                             |
|               |     HashJoinExec: mode=CollectLeft, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@0)], projection=[score@1, subject@3] |
|               |       CoalescePartitionsExec                                                                                                              |
|               |         ProjectionExec: expr=[CAST(key@0 AS Int64) as id, 1 - distance@1 as score]                                                        |
|               |           CooperativeExec                                                                                                                 |
|               |             RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                          |
|               |               BytesProcessedExec                                                                                                          |
|               |                 CooperativeExec                                                                                                           |
|               |                   S3VectorsQueryExec (spice-ci-tests-s3-vectors/arrow-dataset-basic-6): limit=100                                         |
|               |       SchemaCastScanExec                                                                                                                  |
|               |         BytesProcessedExec                                                                                                                |
|               |           DataSourceExec: partitions=1, partition_sizes=[1]                                                                               |
|               |                                                                                                                                           |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------+
