crates/runtime/tests/search/snapshots/integration_models__search__arrow-s3_vectors-dataset-hybrid_multiple_column_megascience_additional_columns_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "data": {
        "question": "In a group of 3 machines where 2 are faulty, what is the probability that the first two machines tested are both faulty?"
      },
      "dataset": "spice.public.qs",
      "matches": {
        "answer": "\\[\nP(\\text{First faulty and second faulty}) = \\frac{2}{3} \\times \\frac{1}{2} = \\boxed{\\frac{1}{3}}\n\\]"
      },
      "primary_key": {
        "id": 525
      },
      "score": 0.01
    },
    {
      "data": {
        "question": "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants."
      },
      "dataset": "spice.public.qs",
      "matches": {
        "question": "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants."
      },
      "primary_key": {
        "id": 361
      },
      "score": 0.01
    },
    {
      "data": {
        "question": "State the degree of the differential equation:\n$$\ny^{\\prime \\prime} = 6x + \\sin x\n$$"
      },
      "dataset": "spice.public.qs",
      "matches": {
        "answer": "The degree of the differential equation is \\(\\boxed{2}\\), as the highest derivative present is the second derivative \\( y'' \\)."
      },
      "primary_key": {
        "id": 772
      },
      "score": 0.01
    },
    {
      "data": {
        "question": "How many groups of 2 are in 14?"
      },
      "dataset": "spice.public.qs",
      "matches": {
        "question": "How many groups of 2 are in 14?"
      },
      "primary_key": {
        "id": 462
      },
      "score": 0.01
    }
  ]
}
